# Bots

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DJANGO_BOT_README.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
bots/: api_client.py  hawkeye.py  randy.py
config/: logging_config.py
reports/: order_book_report.py
thenewboston/: api_client.py
tnb_exchange/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
trading/: admin.py  models.py  tasks.py  tests.py  urls.py  views.py
trading/management/commands/: run_bot.py  setup_bot.py
trading/migrations/: 0001_initial.py
trading/services/: bot_service.py
trading/templates/trading/: base.html  bot_detail.html  bot_list.html  dashboard.html  run_list.html  trade_list.html
